--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ header{
   color: #EFF6E0;
   text-align: center;
   font-family: Georgia, serif:
-  background-color: #black;
+  background-color: #01161E;
 }
 
 header h2{
@@ -25,7 +25,7 @@ header h2{
 }
 
 footer{
-  background-color: #black;
+  background-color: #01161E;
   font-family: Georgia, serif;
   background-color: #AEC3B0;
 }
