--- a/style.css
+++ b/style.css
@@ -28,6 +28,13 @@ footer{
   background-color: #01161E;
   font-family: Georgia, serif;
   background-color: #AEC3B0;
+  text-align: center;
 }
+
+section{
+  padding: 0 25%;
+  margin: 80px 0;
+}
+
 
 
