--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ header{
   text-align: center;
   font-family: Georgia, serif:
   background-color: #01161E;
+  padding: 15px;
   
 }
 
@@ -41,6 +42,7 @@ footer{
   font-family: Georgia, serif;
   background-color: #AEC3B0;
   text-align: center;
+  padding: 12px;
 }
 
 section{
