--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ ol, ul{
 }
 
 a{
-  a: link {color: #blue;}
+  a: link {color: #0645AD;}
   a: visited {color: #663366;}
   a: hover {color: #3366BB}
 }
