update text color
for better contrast on background color

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ main{
   
 header h2{
   font-family: Georgia, serif;
-  color: #EFF6E0;
+  color: #124559;
   font-size: 20px;
   text-align: center;
 }
@@ -53,7 +53,7 @@ section{
 
 p{
   font-family: Georgia, serif;
-  color: 124559;
+  color: #124559;
 }
 
 ol, ul{
