--- a/style.css
+++ b/style.css
@@ -25,12 +25,6 @@ img{
   margin: 15px;
 }
 
-/* Main Stylings for the bulk content of the page*/
-main{
-  background color: #598392;
-  text-align: center;
-}
-  
 header h2{
   font-family: Georgia, serif;
   color: #124559;
@@ -38,12 +32,11 @@ header h2{
   text-align: center;
 }
 
-footer{
-  background-color: #01161E;
-  font-family: Georgia, serif;
-  background-color: #AEC3B0;
+/* Main Stylings for the bulk content of the page*/
+main{
+  background color: #598392;
   text-align: center;
-  padding: 12px;
+  color: #124559;
 }
 
 section{
@@ -58,12 +51,22 @@ p{
 
 ol, ul{
   text-align: left;
+  color: #124559;
 }
+
 /*stylings for links */
 a{
   a: link {color: #0645AD;}
   a: visited {color: #663366;}
   a: hover {color: #3366BB}
+}
+
+footer{
+  background-color: #01161E;
+  font-family: Georgia, serif;
+  background-color: #AEC3B0;
+  text-align: center;
+  padding: 12px;
 }
 
 /*stylings for header and footer bar */
@@ -79,5 +82,7 @@ a{
 .round {
   border-radius: 10px;
 }
+
+
 
 
